prometheus-ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:  
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /prometheus       
  name: prometheus-ingress
  namespace: prometheus

spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
        path: /prometheus
status:
 loadBalancer:
   ingress:
   - hostname:
